Закончить sql таблицу events и categories